fixed path issues

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <img id="clickableImage" src="/assets/closed.webp" alt="Click me" onclick="changeImage()">
-    <div id="overlay" class="overlay"></div>
-    <audio id="sound" src="/assets/intro.mp3"></audio>
+    <center>
+        <img id="clickableImage" src="assets/closed.webp" alt="Click me" onclick="changeImage()">
+        <div id="overlay" class="overlay"></div>
+        <audio id="sound" src="assets/intro.mp3"></audio>
+    </center>
 </body>
 <script src="script.js"></script>
 </html>
