--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <img id="clickableImage" src="assets/closed.webp" alt="Click me" onclick="changeImage()">
         <div id="overlay" class="overlay"></div>
         <audio id="sound" src="assets/intro.mp3"></audio>
+
+        <h1>* there's a door here.</h1>
 </body>
 <script src="script.js"></script>
 </html>
